@@ -14,6 +14,9 @@ Ver.11 (in development)
 - Generic exporting class prepared as DB\Export.php.
   See the Export button on the sample file /samples/Sample_pdf/list_detail_MySQL.html.
 - SwiftMailer was removed, Symphony Mailer is introduced to send e-mail.
+- The YAML based definition file can work as like PHP's one. The file name of yaml file can set as the same as page file.
+  In the script tag to import the framework, the src attribute has to refer the index.php of the repository root.
+[BUG FIX] In same case of using aggregation-select/from the error happened about the view or table didn't exist.
 
 Ver.10 (October 12, 2022)
 - Auto saving for INPUT and TEXTAREA element. Customizing in JavaScript code and their default value are:
